# Programming_practice_381908-1-2

./: .gitignore  .gitmodules  Contacts.cpp  Contacts.h  Snake.h  Source.cpp  Taylor.cpp  Taylor.h  readme.md
1№5/1№5/: Time.cpp  main.cpp
Artem/BullsAndCows/: BullsAndCows.sln
Artem/Dicc/: Dic1.txt  Dic2.txt  Dicc.vcxproj  Dicc.vcxproj.filters  Dict.cpp  Dict.h  Test.cpp  Word.cpp
Artem/SongLibrary/: Song.cpp  SongLib.txt  SongLibrary.vcxproj  SongLibrary.vcxproj.filters  Songs.cpp  Songs.h  Test.cpp  ToRead.txt
Artem/Task 1-4/: Task 1-4.sln
Artem/Task 2 Matrix/: Task 2 Matrix.sln
Artem/Zadanie5/: Zadanie5.sln
GorbachevArtem/: hello_git.txt
GorbachevArtem/P_1_1/: P_1_1.sln
GorbachevArtem/P_2_6/: P_2_6.sln
LakhovKirill/Task4/: CMakeLists.txt  main.cpp
LakhovKirill/Task4/include/: Connector.h  Date.h  FIlmLibrary.h  Film.h  FilmLibrary.h  View.h
LakhovKirill/Task4/src/: Connector.cpp  Date.cpp  FIlmLibrary.cpp  Film.cpp  FilmLibrary.cpp  View.cpp
LakhovKirill/Task5/: CMakeLists.txt  SessionTemplate.cpp  SessionTemplate.h  main.cpp
LakhovKirill/Task5/include/: Cinema.h  Connector.h  DateTime.h  Hall.h  Order.h  Session.h  SessionTemplate.h  Ticket.h  TicketOffice.h  View.h
LakhovKirill/Task5/src/: Cinema.cpp  Connector.cpp  DateTime.cpp  Hall.cpp  Order.cpp  Session.cpp  SessionTemplate.cpp  Ticket.cpp  TicketOffice.cpp  View.cpp
LakhovKirill/Task6/: CMakeLists.txt  main.cpp
LakhovKirill/Task6/include/: Bot.h  Field.h  Game.h  Hit.h  Matrix.h  Player.h  Ship.h  SuspiciousPoint.h  View.h
LakhovKirill/Task6/src/: Bot.cpp  Field.cpp  Game.cpp  Hit.cpp  Matrix.cpp  Player.cpp  Ship.cpp  SuspiciousPoint.cpp  View.cpp
SvetlanaKozel/: Credit.cpp  Credit.h  Decimal.cpp  Decimal.h  Time.cpp  Time.h  Untitled1.cpp
Tasks/: Task_1.md  Task_3.md  Task_4.md  Task_5.md  Task_6.md
VitulinIvan/: Test.txt
(+542 files in other folders)
